// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimDetails component matches the snapshot on render 1`] = `
<Memo(Connect(Component))>
  <ScrollViewMock
    keyboardShouldPersistTaps="handled"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(5, 5, 13)",
          "fontFamily": "TT Commons",
          "fontSize": 30,
          "marginTop": 32,
          "textAlign": "center",
        }
      }
    >
      Email
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginTop": 24,
        }
      }
    >
      <TextInputField
        autoFocus={true}
        fieldName="email"
        fieldValue="test@test.com"
        handleFieldInput={[Function]}
        key="email"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginVertical": 48,
        }
      }
    >
      <JolocomButton
        disabled={false}
        onPress={[Function]}
        text="Add claim"
      />
    </View>
  </ScrollViewMock>
</Memo(Connect(Component))>
`;

exports[`ClaimDetails component matches the snapshot on render with multi-line claim 1`] = `
<Memo(Connect(Component))>
  <ScrollViewMock
    keyboardShouldPersistTaps="handled"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(5, 5, 13)",
          "fontFamily": "TT Commons",
          "fontSize": 30,
          "marginTop": 32,
          "textAlign": "center",
        }
      }
    >
      Name
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginTop": 24,
        }
      }
    >
      <TextInputField
        autoFocus={true}
        fieldName="givenName"
        fieldValue="natascha"
        handleFieldInput={[Function]}
        key="givenName"
      />
      <TextInputField
        autoFocus={false}
        fieldName="familyName"
        fieldValue="test"
        handleFieldInput={[Function]}
        key="familyName"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginVertical": 48,
        }
      }
    >
      <JolocomButton
        disabled={false}
        onPress={[Function]}
        text="Add claim"
      />
    </View>
  </ScrollViewMock>
</Memo(Connect(Component))>
`;
